--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -87,7 +87,7 @@
             border: 1px solid $clrPrimary2;
             border-radius: 5px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            margin-top: 10px;
+            margin: -15px 35px 0px -10px;
 
             button {
                 background: none;
