small mistake fixed

--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -14,7 +14,7 @@
   }
 
   .carousel-container:hover~.preview-body .gig-title {
-    color: $bgColor3;
+    text-decoration: underline;
   }
 
   .heart {
