--- a/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
@@ -85,10 +85,9 @@
 
   .package-tabs {
     display: flex;
-    font-family: macan-regular;
     font-size: 1rem;
     border: 1px solid $clrSecondary2;
-    margin-block-end: 1rem;
+    border-bottom: none;
 
     .btn-package {
       flex: 1 1;
@@ -99,7 +98,7 @@
       color: $clrSecondary5;
       cursor: pointer;
       font-size: 1rem;
-      font-family: macan-bold;
+      font-family: 'macan-bold';
       padding: 16px;
       text-align: center;
 
@@ -120,6 +119,7 @@
     justify-content: space-between;
     height: fit-content;
     border: 1px solid $clrSecondary2;
+    border-top: none;
     padding: 0 1.5rem;
 
     .type-price {
@@ -235,15 +235,13 @@
       border: 1px solid $clrSecondary5;
       border-radius: 4px;
       cursor: pointer;
-      display: inline-block;
       font-size: 1rem;
-      // font-weight: 600;
       line-height: 100%;
       padding: 0.75rem 1.5rem;
       position: relative;
       text-align: center;
       text-decoration: none;
-      transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
+      transition: 0.2s cubic-bezier(0.75, 0, 0.25, 1);
 
       &:hover {
         background: $clrSecondary5;
