--- a/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
@@ -117,7 +117,7 @@
       margin: 2rem 0 1.5rem 0;
 
       .type {
-        font-family: macan-bold;
+        font-family: 'macan-bold';
       }
 
       .price {
