--- a/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
@@ -60,7 +60,7 @@
       }
     }
 
-    .share {
+    button {
       align-items: center;
       justify-content: center;
       width: 48px;
@@ -81,17 +81,14 @@
     border: 1px solid $clrSecondary2;
     border-bottom: none;
 
-    .btn-package {
+    button {
       background-color: $clrSecondary0;
       width: 100%;
       border: solid $clrSecondary2;
       border-width: 0 1px 1px 0;
       color: $clrSecondary5;
-      cursor: pointer;
       font-size: 1rem;
-      font-family: 'macan-bold';
       padding: 16px;
-      text-align: center;
 
       &.checked {
         border-bottom: 3px solid #222325;
@@ -115,10 +112,6 @@
       justify-content: space-between;
       align-items: center;
       margin: 2rem 0 1.5rem 0;
-
-      .type {
-        font-family: 'macan-bold';
-      }
 
       .price {
         font-size: 1.25rem;
@@ -153,7 +146,6 @@
     }
 
     .features {
-      list-style: none;
       padding: 0;
       color: $clrSecondary6;
       font-size: rem(14px);
@@ -168,7 +160,7 @@
       }
     }
 
-    .btn-continue {
+    button {
       justify-content: center;
       align-items: center;
       padding: 0.75rem 1.5rem;
@@ -178,11 +170,10 @@
       color: $clrPrimary1;
       border: 1px solid $clrPrimary3;
       border-radius: 0.25rem;
-      cursor: pointer;
       margin-block-end: 1.25rem;
+      font-size: 16px;
 
       span {
-        font-family: macan-bold;
         margin: auto;
       }
 
@@ -200,25 +191,25 @@
     }
   }
 
-  .contact-seller-wrapper {
+  .contact-seller {
     align-items: center;
     justify-content: center;
     background-color: $clrSecondary0;
     padding: 1.5rem;
     margin-block-end: 1rem;
 
-    .contact-seller {
+    button {
       color: $clrSecondary6;
       width: 100%;
       border: 1px solid $clrSecondary5;
       border-radius: 4px;
-      cursor: pointer;
       font-size: 1rem;
       line-height: 100%;
       padding: 0.75rem 1.5rem;
       position: relative;
       text-align: center;
       transition: 0.2s cubic-bezier(0.75, 0, 0.25, 1);
+      background: none;
 
       &:hover {
         background: $clrSecondary5;
