--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -148,6 +148,9 @@
         padding-block-end: 120px;
         font-weight: 600;
 
+        &.old{
+          padding: 1em 0;
+        }
         &:hover {
           text-decoration: none;
         }
@@ -177,7 +180,7 @@
           color: $clrPrimary1;
           background-color: $bgColor3;
           border-radius: 3px;
-          margin-block-end: 0.5em;
+          // margin-block-end: 0.5em;
         }
       }
     }
