grid works for gigDetails

--- a/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
@@ -5,7 +5,8 @@
   margin-block-end: 30px;
   background-color: $clrPrimary1;
   color: $clrPrimary2;
-  grid-column: 3/4;
+  width: 100%;
+  grid-column: 4/-1;
 
   .gig-interactions {
     align-items: center;
