--- a/Frontend/src/assets/styles/cmps/_PurchaseAside.scss
+++ b/Frontend/src/assets/styles/cmps/_PurchaseAside.scss
@@ -1,184 +1,175 @@
 .purchase-aside-wrapper {
+  margin-top: 1em;
   padding: 0 1em;
-  width: 41.66667%;
   padding: 0 0;
   max-width: 596.667px;
   color: $clrSecondary6;
-}
-.purchase-aside {
-  // padding: 16px 16px;
-  background-color: $clrPrimary1;
-  // border: 1px solid $clrSecondary2;
-  margin: 0 auto;
-  width: 377px;
+  width: 100%;
 
-  .payment-header {
-    display: flex;
-    height: 70px;
-    margin-block-end: 20px;
+  @media only screen and (min-width: 900px) {
+    width: 41.66667%;
+  }
 
-    img {
-      width: 110px;
-      height: 70px;
-      margin-inline-end: 1em;
-      border-radius: 4px;
+  .purchase-aside {
+    background-color: $clrPrimary1;
+    width: 100%;
+
+    @media only screen and (min-width: 900px) {
+      margin: 0 auto;
+      width: 377px;
+      border-color: #f4f4f4 #e4e5e7;
+      border-style: solid;
+      border-width: 1px;
+      border-radius: 0.25em;
     }
 
-    p {
-      font-weight: bold;
-      margin: 0;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .features {
-      list-style: none;
-      padding: 0;
-      color: $clrSecondary6;
-      font-size: rem(14px);
-      margin-block-end: rem(20px);
-
-      li {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        i {
-          margin-inline-end: 16px;
-        }
+    .gig {
+      @media only screen and (min-width: 900px) {
+        border-block-end: 1px solid #f4f4f4;
       }
-    }
-    .features {
-      list-style: none;
-      padding: 0;
-      color: $clrSecondary6;
-      font-size: rem(14px);
-      margin-block-end: rem(20px);
+      padding: 1em;
 
-      li {
+      .purchase-header {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        i {
-          margin-inline-end: 16px;
-        }
-      }
-    }
-
-    .order-details-general {
-      display: flex;
-      justify-content: space-between;
-      padding-block-start: 20px;
-      border-block-start: 1px solid $clrSecondary2;
-      padding: 16px 0;
-      font-weight: 500;
-      background-color: transparent;
-      margin-bottom: 0;
-      text-align: left;
-      border: none;
-
-      p {
-        font-weight: 600;
-      }
-    }
-
-    .gig-qualities {
-      display: flex;
-      flex-direction: column;
-
-      .gig-quality {
-        display: flex;
-        align-items: center;
-        gap: 10px;
+        margin-block-end: 20px;
 
         img {
-          width: 14px;
-          margin-inline-end: 9px;
+          width: 110px;
+          height: 70px;
+          margin-inline-end: 1em;
+          border-radius: 0.25em;
+        }
+
+        p {
+          font-family: macan-bold;
+          font-weight: 600;
+          margin: 0;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          padding-block-end: 0.25em;
+        }
+      }
+
+      .purchase-package-price {
+        display: flex;
+        justify-content: space-between;
+        padding: 1em 0;
+        font-weight: 500;
+        background-color: transparent;
+        margin-bottom: 0;
+        text-align: left;
+      }
+
+      .features {
+        list-style: none;
+        padding: 0;
+        color: $clrSecondary6;
+
+        li {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          padding: em(6px) 0;
+
+          i {
+            margin-inline-end: 1em;
+          }
         }
       }
     }
 
-    .service-fee {
-      display: flex;
-      justify-content: space-between;
-      // margin-block-end: 16px;
-      height: 30px;
+    .payment-summary {
+      padding: 1em;
 
-      span {
+      .summary-table {
+        border-bottom: 1px solid #f4f4f4;
+        padding: 0 0 1em;
+        margin-bottom: 1em;
+
+        .service-fee {
+          display: flex;
+          justify-content: space-between;
+          padding: 0 0 em(6px);
+
+          i {
+            display: flex;
+            align-items: center;
+          }
+        }
+
+        .vat-fee {
+          display: flex;
+          justify-content: space-between;
+          padding: em(6px) 0 0;
+
+          span {
+            display: flex;
+            align-items: center;
+          }
+        }
+      }
+
+      .summary-footer {
+        padding-block-end: 1em;
+
+        .total-fee {
+          display: flex;
+          justify-content: space-between;
+          font-size: em(18px);
+          padding-block-start: 20px;
+          font-weight: 700;
+          padding: 0 0 rem(6px);
+        }
+
+        .not {
+          color: $clrSecondary6;
+        }
+
+        .delivery-time {
+          display: flex;
+          flex-wrap: nowrap;
+          justify-content: space-between;
+          align-items: center;
+          padding: em(6px) 0 0;
+        }
+      }
+
+      .confirm-btn {
+        background-color: $clrPrimary3;
+        color: $clrPrimary1;
+        width: 100%;
+        height: 2.625em;
+        font-family: 'macan-bold';
+        font-size: 1em;
+        line-height: 100%;
+        border-radius: rem(5px);
+
+        &:hover {
+          background-color: $clrSecondary8;
+        }
+        &.paypal {
+          background-color: #0070ba;
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: background-color 0.3s ease-in-out;
+        }
+      }
+
+      .secure-payment {
+        color: $clrSecondary6;
         display: flex;
         align-items: center;
-        // gap: 10px;
-      }
-
-      img {
-        height: 16px;
-        width: 16px;
-        margin-inline-start: 8px;
-      }
-    }
-    .vat-fee {
-      display: flex;
-      justify-content: space-between;
-      margin-block-end: 16px;
-      height: 30px;
-
-      span {
-        display: flex;
-        align-items: center;
-        // gap: 10px;
-      }
-
-      img {
-        height: 16px;
-        width: 16px;
-        margin-inline-start: 8px;
+        justify-content: center;
+        font-size: em(14px);
+        line-height: em(22px);
+        margin-top: rem(8px);
+        i {
+          margin-inline-end: 0.5em;
+          display: block;
+        }
       }
     }
-
-    .total-fee {
-      display: flex;
-      justify-content: space-between;
-      // border-top: 1px solid $clrSecondary2;
-      font-size: rem(18px);
-      padding-block-start: 20px;
-      font-weight: 700;
-      padding: rem(6px) 0;
-    }
-
-    .not {
-      color: $clrSecondary6;
-    }
-
-  }
-  .confirm-btn {
-    background-color: $clrPrimary3;
-    color: $clrPrimary1;
-    width: 100%;
-    height: 2.625em;
-    font-family: 'macan-bold';
-    font-size: 1em;
-    line-height: 100%;
-    border-radius: rem(5px);
-
-    &:hover {
-      background-color: $clrSecondary8;
-    }
-  }
-
-  .delivery-time {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6px 0;
-  }
-
-  .secure-payment {
-    font-size: rem(14px);
-    line-height: rem(22px);
-    color: $clrSecondary6;
-    text-align: center;
-    margin-top: 0.5em;
   }
 }
