--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -368,24 +368,84 @@
 }
 
 .gig-details {
-    .gig-details-main {
-        @media (max-width: 900px) {
-            width: 100%;
-        }
-    }
+    @media(max-width: 900px) {
+        grid-template-columns: 1fr;
 
-    .gig-details-aside {
-        @media (max-width: 900px) {
+        grid-template-areas:
+            "explore-category explore-category"
+            "gig-images gig-images"
+            "purchase-part purchase-part"
+            "gig-description gig-description"
+            "gig-seller gig-seller"
+            "gig-reviews gig-reviews";
+
+        main {
+            grid-column: 1/-1;
+            display: grid;
+            max-width: 900px;
+
+            section {
+                &:nth-child(1) {
+                    grid-area: explore-category;
+                }
+
+                &:nth-child(2) {
+                    grid-area: gig-images;
+                }
+
+                &:nth-child(3) {
+                    grid-area: gig-description;
+                }
+
+                &:nth-child(4) {
+                    grid-area: gig-seller;
+                }
+
+                &:nth-child(5) {
+                    grid-area: gig-reviews;
+                }
+            }
+        }
+
+        .gig-details-aside {
+            grid-column: 1/-1;
             position: static;
+            grid-area: purchase-part;
 
             .gig-interactions {
                 display: none;
             }
         }
+    }
 
-        @media (min-width: 900px) {
-            position: sticky;
+    @media (min-width: 900px) {
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 2%;
+
+        main{
+            grid-column: 1/3;
         }
+
+        .gig-details-aside {
+            position: sticky;
+            grid-column: 3/4;
+        }
+    }
+
+    @media (min-width: 950px) {
+        gap: 3%;
+    }
+
+    @media (min-width: 1000px) {
+        gap: 5%;
+    }
+
+    @media (min-width: 1160px) {
+        gap: 7%;
+    }
+
+    @media (min-width: 1260px) {
+        gap: 9.15%;
     }
 }
 
