--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -1,15 +1,11 @@
 .gig-details {
-  grid-template-columns: 1fr 1fr 1fr;
   max-width: 1304px;
   color: $clrPrimary2;
   padding: 32px 0px 24px 0px;
-  gap: 9.15%;
 
   main {
     background-color: $clrPrimary1;
-    width: 100%;
-    grid-column: 1/3;
-    max-width: 100%;
+    height: fit-content;
 
     .explore-category {
       align-items: center;
