--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -9,6 +9,8 @@
         width: 100%;
         box-sizing: border-box;
         font-family: 'macan-regular';
+        max-width: 900px;
+        margin: auto;
 
         table {
             width: 100%;
