--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -59,6 +59,7 @@
                 text-align: left;
                 border: none;
                 min-height: 81px;
+                max-width: 130px;
 
                 img {
                     grid-row: span 2;
