searchbar in header fix

--- a/Frontend/src/assets/styles/cmps/_SearchBar.scss
+++ b/Frontend/src/assets/styles/cmps/_SearchBar.scss
@@ -60,6 +60,7 @@
                 border-radius: 5px 0px 0px 5px;
                 border: 1px solid $clrSecondary45;
                 font-size: 16px;
+                max-width: 600px;
 
                 &:focus {
                     outline: none;
