--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -7,6 +7,10 @@
   padding-inline-start: 1.25em;
   color: $clrPrimary2;
 
+  .title{
+    width: 100%;
+  }
+
   .the-gigs {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -70,11 +74,13 @@
 
   .profile{
     padding:0.75em;
+    
     .user-preview{
       display: flex;
       align-items: center;
       height: 58px;
       padding-block-end:0.75em;
+      margin: 0;
       .avatar-userProfile{
         width: 1.5em;
         height: 1.5em;
@@ -135,6 +141,9 @@
   .info-block {
     border: 1px solid $clrSecondary14;
     background-color: $clrPrimary1;
+    @media screen and (max-width: 900px){
+      border: 0;
+    }
 
 
     &.gig {
