--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -1,435 +1,434 @@
 .home-wrapper {
-    .welcome-wrapper {
-        .welcome-section {
-            @media (max-width: 1400px) {
-                padding: 1em;
-            }
+  .welcome-wrapper {
+    .welcome-section {
+      @media (max-width: 1400px) {
+        padding: 1em;
+      }
 
-            .welcome-text-search {
-                @media (max-width: 1400px) {
-                    margin-left: 0.4em;
-
-                    h1 {
-                        line-height: 48px;
-                        font-size: 40px;
-                    }
-                }
-
-                @media (max-width: 899px) {
-                    margin: auto;
-                    width: 100%;
-                    padding: 32px 64px;
-
-                    h1 {
-                        max-width: 100%;
-                    }
-
-                    .search-bar {
-                        width: 100%;
-                    }
-
-                    .quick-search {
-                        display: none;
-                    }
-                }
-
-                @media (max-width: 400px) {
-                    padding: 48px 0;
-
-                    h1 {
-                        font-size: 32px;
-                        line-height: 40px;
-                    }
-                }
-
-                @media (min-width: 900px) {
-                    width: 650px;
-
-                    h1 {
-                        max-width: 560px;
-                    }
-
-                    .search-bar {
-                        width: 86.5%;
-                    }
-                }
-
-                @media (min-width: 1401px) {
-                    margin-left: 0;
-
-                    h1 {
-                        font-size: 48px;
-                        line-height: 56px;
-                    }
-                }
-            }
-        }
-    }
-
-    .home-companies-section {
-        .companies {
-            @media(max-width: 1200px) {
-                gap: 3em;
-            }
-
-            @media(min-width: 1200px) {
-                gap: 4em;
-            }
-        }
-
-        h4 {
-            @media(max-width: 1200px) {
-                display: none;
-            }
-        }
-    }
-
-    .home-services-section {
+      .welcome-text-search {
         @media (max-width: 1400px) {
-            padding: 1em 2em;
+          margin-left: 0.4em;
+
+          h1 {
+            line-height: 48px;
+            font-size: 40px;
+          }
+        }
+
+        @media (max-width: 899px) {
+          margin: auto;
+          width: 100%;
+          padding: 32px 64px;
+
+          h1 {
+            max-width: 100%;
+          }
+
+          .search-bar {
+            width: 100%;
+          }
+
+          .quick-search {
+            display: none;
+          }
+        }
+
+        @media (max-width: 400px) {
+          padding: 48px 0;
+
+          h1 {
+            font-size: 32px;
+            line-height: 40px;
+          }
+        }
+
+        @media (min-width: 900px) {
+          width: 650px;
+
+          h1 {
+            max-width: 560px;
+          }
+
+          .search-bar {
+            width: 86.5%;
+          }
         }
 
         @media (min-width: 1401px) {
-            padding: 1em 0em;
+          margin-left: 0;
+
+          h1 {
+            font-size: 48px;
+            line-height: 56px;
+          }
         }
+      }
+    }
+  }
 
-        .services {
-            .service {
-                width: calc(100% / 5);
+  .home-companies-section {
+    .companies {
+      @media (max-width: 1200px) {
+        gap: 3em;
+      }
 
-                @media (max-width: 1300px) {
-                    width: calc(100% / 4);
-                }
-
-                @media (max-width: 1100px) {
-                    width: calc(100% / 3);
-                }
-
-                @media (max-width: 800px) {
-                    width: calc(100% / 2);
-                }
-
-                @media (max-width: 600px) {
-                    width: 100%;
-                }
-            }
-        }
-
-        .carousel-btn {
-            @media (max-width: 1400px) {
-                &.left-side {
-                    left: 1%;
-                }
-
-                &.right-side {
-                    right: 1%;
-                }
-            }
-
-            @media (min-width: 1401px) {
-                &.left-side {
-                    left: -1.5%;
-                }
-
-                &.right-side {
-                    right: -1.5%;
-                }
-            }
-        }
+      @media (min-width: 1200px) {
+        gap: 4em;
+      }
     }
 
-    .home-categories-section {
-        @media(max-width: 1400px) {
-            padding: 6em 2em;
-        }
+    h4 {
+      @media (max-width: 1200px) {
+        display: none;
+      }
+    }
+  }
 
-        @media(min-width: 1400px) {
-            padding: 6em 0em;
-        }
-
-        .categories {
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            gap: 1em;
-
-            @media (max-width: 900px) {
-                grid-template-columns: repeat(3, 1fr);
-            }
-
-            @media (max-width: 600px) {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
+  .home-services-section {
+    @media (max-width: 1400px) {
+      padding: 1em 2em;
     }
 
-    .home-info-wrapper {
-        .info-section {
-            @media (max-width: 1400px) {
-                padding: 3.5em 2em;
-
-                .text {
-                    width: 50%;
-
-                    p {
-                        max-width: 75%;
-                    }
-                }
-
-                .info-img {
-                    width: 50%;
-                }
-            }
-
-            @media(max-width: 900px) {
-                flex-direction: column;
-
-                .text {
-                    width: 100%;
-
-                    p {
-                        max-width: 100%;
-                    }
-                }
-
-                .info-img {
-                    width: 100%;
-                    margin-top: 1.5em;
-                }
-            }
-
-            @media (min-width: 1401px) {
-                padding: 6em 0em;
-
-                .text {
-                    width: 50%;
-
-                    p {
-                        max-width: 75%;
-                    }
-                }
-
-                .info-img {
-                    width: 50%;
-                }
-            }
-        }
+    @media (min-width: 1401px) {
+      padding: 1em 0em;
     }
 
-    .join-wrapper {
-        @media (max-width: 1400px) {
-            padding: 1em 2em;
+    .services {
+      .service {
+        width: calc(100% / 5);
+
+        @media (max-width: 1300px) {
+          width: calc(100% / 4);
         }
 
-        @media (min-width: 1401px) {
-            padding: 1em 0em;
+        @media (max-width: 1100px) {
+          width: calc(100% / 3);
         }
 
-        .join-section {
-            @media(min-width: 300px) {
-                background-color: $bgColor4;
-                padding: 5em 2em;
-
-                h2 {
-                    font-size: 40px;
-                    line-height: 48px;
-                }
-            }
-
-            @media (min-width: 900px) {
-                background-image: url("../src/assets/img/bg-mini-signup.webp");
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: right;
-            }
-
-            @media (min-width: 1160px) {
-                background-image: url("../src/assets/img/bg-signup.webp");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center;
-                padding: 8em 6em;
-
-                h2 {
-                    font-size: 48px;
-                    line-height: 56px;
-                }
-            }
+        @media (max-width: 800px) {
+          width: calc(100% / 2);
         }
+
+        @media (max-width: 600px) {
+          width: 100%;
+        }
+      }
     }
+
+    .carousel-btn {
+      @media (max-width: 1400px) {
+        &.left-side {
+          left: 1%;
+        }
+
+        &.right-side {
+          right: 1%;
+        }
+      }
+
+      @media (min-width: 1401px) {
+        &.left-side {
+          left: -2%;
+        }
+
+        &.right-side {
+          right: -2%;
+        }
+      }
+    }
+  }
+
+  .home-categories-section {
+    @media (max-width: 1400px) {
+      padding: 6em 2em;
+    }
+
+    @media (min-width: 1400px) {
+      padding: 6em 0em;
+    }
+
+    .categories {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 1em;
+
+      @media (max-width: 900px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @media (max-width: 600px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+  }
+
+  .home-info-wrapper {
+    .info-section {
+      @media (max-width: 1400px) {
+        padding: 3.5em 2em;
+
+        .text {
+          width: 50%;
+
+          p {
+            max-width: 75%;
+          }
+        }
+
+        .info-img {
+          width: 50%;
+        }
+      }
+
+      @media (max-width: 900px) {
+        flex-direction: column;
+
+        .text {
+          width: 100%;
+
+          p {
+            max-width: 100%;
+          }
+        }
+
+        .info-img {
+          width: 100%;
+          margin-top: 1.5em;
+        }
+      }
+
+      @media (min-width: 1401px) {
+        padding: 6em 0em;
+
+        .text {
+          width: 50%;
+
+          p {
+            max-width: 75%;
+          }
+        }
+
+        .info-img {
+          width: 50%;
+        }
+      }
+    }
+  }
+
+  .join-wrapper {
+    @media (max-width: 1400px) {
+      padding: 1em 2em;
+    }
+
+    @media (min-width: 1401px) {
+      padding: 1em 0em;
+    }
+
+    .join-section {
+      @media (min-width: 300px) {
+        background-color: $bgColor4;
+        padding: 5em 2em;
+
+        h2 {
+          font-size: 40px;
+          line-height: 48px;
+        }
+      }
+
+      @media (min-width: 900px) {
+        background-image: url('../src/assets/img/bg-mini-signup.webp');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: right;
+      }
+
+      @media (min-width: 1160px) {
+        background-image: url('../src/assets/img/bg-signup.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding: 8em 6em;
+
+        h2 {
+          font-size: 48px;
+          line-height: 56px;
+        }
+      }
+    }
+  }
 }
 
 .app-header {
-    @media (min-width: 1250px) {
-        .carousel-btn {
-            display: none;
-        }
+  @media (min-width: 1250px) {
+    .carousel-btn {
+      display: none;
+    }
+  }
+
+  .main-nav {
+    @media (max-width: 1400px) {
+      padding: 1em 2em;
     }
 
-    .main-nav {
-        @media(max-width: 1400px) {
-            padding: 1em 2em;
-        }
-
-        @media(min-width: 1401px) {
-            padding: 1em 0em;
-        }
-
-        .container {
-            .logo-dropdown-area> :nth-child(1) {
-                @media(min-width: 1151px) {
-                    display: none;
-                }
-            }
-        }
+    @media (min-width: 1401px) {
+      padding: 1em 0em;
     }
 
-    .category-nav {
-        @media (max-width: 1400px) {
-            padding: 0 2em;
+    .container {
+      .logo-dropdown-area > :nth-child(1) {
+        @media (min-width: 1151px) {
+          display: none;
         }
+      }
     }
+  }
+
+  .category-nav {
+    @media (max-width: 1400px) {
+      padding: 0 2em;
+    }
+  }
 }
 
 .user-login-wrapper {
-    @media (max-width: 900px) {
-        width: 400px;
+  @media (max-width: 900px) {
+    width: 400px;
 
-        .login-notes {
-            display: none;
-        }
-
-        .user-interaction {
-            width: 100%;
-        }
+    .login-notes {
+      display: none;
     }
 
-    @media (min-width: 900px) {
-        width: 850px;
-
-        .user-interaction {
-            width: 50%;
-        }
+    .user-interaction {
+      width: 100%;
     }
+  }
+
+  @media (min-width: 900px) {
+    width: 850px;
+
+    .user-interaction {
+      width: 50%;
+    }
+  }
 }
 
 .dashboard-page {
-    .info-divs {
-        .grid-item {
-            @media (max-width: 1400px) {
-                .icon {
-                    height: 75px;
-                    width: 75px;
-                }
-
-                .title {
-                    font-size: 1em;
-                }
-
-                .info {
-                    font-size: 1em;
-                }
-            }
-
-            @media (min-width: 1401px) {
-                .icon {
-                    height: 150px;
-                    width: 150px;
-                }
-
-                .title {
-                    font-size: 2em;
-                }
-
-                .info {
-                    font-size: 2em;
-                }
-            }
+  .info-divs {
+    .grid-item {
+      @media (max-width: 1400px) {
+        .icon {
+          height: 75px;
+          width: 75px;
         }
+
+        .title {
+          font-size: 1em;
+        }
+
+        .info {
+          font-size: 1em;
+        }
+      }
+
+      @media (min-width: 1401px) {
+        .icon {
+          height: 150px;
+          width: 150px;
+        }
+
+        .title {
+          font-size: 2em;
+        }
+
+        .info {
+          font-size: 2em;
+        }
+      }
     }
+  }
 }
 
 .gig-index {
-    @media(max-width: 1400px) {
-
-        .gig-results-title,
-        .selected-filters-wrapper,
-        .gig-list {
-            padding-left: 32px;
-            padding-right: 32px;
-        }
-
-        .gig-filter {
-            .floating-top-bar {
-                padding-left: 32px;
-                padding-right: 32px;
-            }
-        }
+  @media (max-width: 1400px) {
+    .gig-results-title,
+    .selected-filters-wrapper,
+    .gig-list {
+      padding-left: 32px;
+      padding-right: 32px;
     }
+
+    .gig-filter {
+      .floating-top-bar {
+        padding-left: 32px;
+        padding-right: 32px;
+      }
+    }
+  }
 }
 
 .gig-details {
-    @media(max-width: 900px) {
-        grid-template-columns: 1fr 1fr;
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr 1fr;
 
-        main {
-            grid-column: 1/-1;
-        }
-
-        .gig-details-aside {
-            grid-column: 1/-1;
-            position: static;
-
-            .gig-interactions {
-                display: none;
-            }
-        }
+    main {
+      grid-column: 1/-1;
     }
 
-    @media (min-width: 900px) {
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 2%;
+    .gig-details-aside {
+      grid-column: 1/-1;
+      position: static;
 
-        main {
-            grid-column: 1/3;
-        }
+      .gig-interactions {
+        display: none;
+      }
+    }
+  }
 
-        .gig-details-aside {
-            position: sticky;
-            grid-column: 3/4;
-        }
+  @media (min-width: 900px) {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2%;
+
+    main {
+      grid-column: 1/3;
     }
 
-    @media (min-width: 950px) {
-        gap: 3%;
+    .gig-details-aside {
+      position: sticky;
+      grid-column: 3/4;
     }
+  }
 
-    @media (min-width: 1000px) {
-        gap: 5%;
-    }
+  @media (min-width: 950px) {
+    gap: 3%;
+  }
 
-    @media (min-width: 1160px) {
-        gap: 7%;
-    }
+  @media (min-width: 1000px) {
+    gap: 5%;
+  }
 
-    @media (min-width: 1260px) {
-        gap: 9.15%;
-    }
+  @media (min-width: 1160px) {
+    gap: 7%;
+  }
+
+  @media (min-width: 1260px) {
+    gap: 9.15%;
+  }
 }
 
 .profile-page {
-    .user-profile {
-        @media (max-width: 1240px) {
-            padding: 0 1.25em;
-        }
+  .user-profile {
+    @media (max-width: 1240px) {
+      padding: 0 1.25em;
     }
+  }
 }
 
 .app-footer {
-    @media (max-width: 1400px) {
-        padding: 1em 2em;
-    }
+  @media (max-width: 1400px) {
+    padding: 1em 2em;
+  }
 
-    @media (min-width:1401px) {
-        padding: 1em 0em;
-    }
+  @media (min-width: 1401px) {
+    padding: 1em 0em;
+  }
 }
