--- a/Frontend/src/assets/styles/basics/_helpers.scss
+++ b/Frontend/src/assets/styles/basics/_helpers.scss
@@ -110,7 +110,7 @@
     pointer-events: all;
   }
   .dwn-arr {
-    transform: translateY(-3px) rotate(-180deg);
+    transform: translateY(0) rotate(-180deg);
   }
 }
 
