working on UserChat

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -44,6 +44,8 @@
 @import "cmps/PurchaseMain";
 @import "cmps/PurchaseAside";
 
+@import "cmps/UserChat";
+
 // Views
 @import "views/HomePage";
 @import "views/AboutUs";
