--- a/Frontend/src/assets/styles/views/_UserProfile.scss
+++ b/Frontend/src/assets/styles/views/_UserProfile.scss
@@ -187,6 +187,7 @@
           display: flex;
           color: $clrSecondary6;
           margin-block-start: 1em;
+          flex-wrap: wrap;
 
           .skill {
             min-width: 2.5em;
